--- a/DawsonThesis.tex
+++ b/DawsonThesis.tex
@@ -187,7 +187,7 @@
 
 %%% edit the following commands to match your thesis %%%%%%%%%%
 
-\title{Breaking things so you don't have to: simulation-driven verification and design for safe autonomous systems}
+\title{Breaking things so you don't have to: risk assessment and failure prediction for cyber-physical AI}
 
 % \Author{Author full name}{Author department}[Author's first PREVIOUS degree][Author's second PREVIOUS degree][...
 % Note that third, fourth, fifth, and sixth arguments are optional [] and may be omitted
@@ -203,7 +203,7 @@
 \Degree{Doctor of Philosophy}{Department of Aeronautics and Astronautics}
 
 % If there is more than one supervisor, use the \Supervisor command for each.
-\Supervisor{Chuchu Fan}{Associate Professor of Aeronautics and Astronautics}
+\Supervisor{Chuchu Fan}{Assistant Professor of Aeronautics and Astronautics}
 \Supervisor{Russ Tedrake}{Professor of Electrical Engineering and Computer Science}
 \Supervisor{Serta\c c Karaman}{Professor of Aeronautics and Astronautics}
 
@@ -217,7 +217,7 @@
 \DegreeDate{May}{2024}
 
 % Date that final thesis is submitted to department
-\ThesisDate{May 16 (TBD), 2024}
+\ThesisDate{May 16, 2024}  % TODO
 
 %%%%%%  Choose whether to have a CREATIVE COMMONS License  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
