--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -8,5 +8,14 @@
 \chapter*{Acknowledgments}
 \addcontentsline{toc}{chapter}{Acknowledgments}
 
-% TODO
-To be written.
+I am lucky to have had an array of supporters throughout my PhD, each of whom deserves thanks for their role in this adventure. First, to my advisor, Professor Chuchu Fan: thank you for bringing me into your lab nearly four years ago, coaching me through the ups and downs of academic life, and giving me space to explore new research interests. Our weekly discussions provided a great source of perspective, support, and (when needed) challenge, and I am a better researcher for having had the privilege of working with you. In addition, thank you to my undergraduate advisors, Professors Kash Gokli and Philip Cha, for starting me on my academic journey with just the right combination of support and independence.
+
+Next, to my thesis committee and research collaborators. Professors Russ Tedrake and Serta\c c Karaman, thank you for your helpful discussions and feedback as I progressed from blurry vision to completed PhD. To Professors Sicun Gao and Max Li, thank you for the opportunity to work together at the start and end of my PhD journey, respectively. To Chelsea, Yang, Austin, and Falk: I'm grateful that we had the chance to collaborate and learn from each other's perspectives. To Chafik, Rachel, Jake, Fayez, Gee, Tyler, Jordyn, Britany, and the rest of the team at Marble, thanks for having me along for the ride!
+
+I am also grateful for the countless conversations, both personal and research-related, with my labmates over the years: Kunal, Jake, Kwesi, Yue, Songyuan, Ji, Anjali, Oswin, Mingxin, Yongchao, Ruixiao, Yilun, Cheng, Allen, Laura, Chenning, Rujul, Sydney, Zengyi, and Kathleen. In addition, I am lucky to have had the opportunity to mentor a number of fantastic undergraduate researchers during my PhD: Dylan, Bethany, Mukun, Suchitha, Jenny, and Van. Hopefully you learned as much from working with me as I did from working with you. I know that you will all accomplish great things in the coming years.
+
+Beyond MIT, thank you to the friends who have kept me sane over the last 5 years. To my friends from Harvey Mudd, Camille, Maggie, Alex, Sara, Katie, and Brenden: thank you for countless catch-up calls and apple-picking adventures. To my friends in Boston, Riley, Matt, Fran, James, Annie, Avi, and Leah: thank you for good times and board games, climbing, and canoeing. To Evan: thank you for your level-headed advice and good-natured humor.
+
+Most importantly, thank you to my family. To Mom and Dad: I don't think a paragraph or even a whole thesis would be enough to say thank you for your boundless love and support. You've been there for me every step of the way, and I'm so grateful for you. To Grandma and Grandpa: you two are the best role models I could have asked for, both as educators and as loving, supportive human beings. To my brother, Henry: it has been such a privilege to grow up with you --- I'm a better person for having you as a brother, and I can't wait to see what you do next on your own journey.
+
+Finally, to the love of my life, Lydia: words are not enough, but I can try. Thank you for being there with me through the ups and downs of both life and my PhD. Your compassion, intelligence, and sheer zest for life inspire me every day, and there's no place I would rather be than with you. You are the best, I love you, and I'm looking forward to discovering what the next chapter holds.
