--- a/main.bib
+++ b/main.bib
@@ -583,7 +583,7 @@
   publisher = {PMLR},
   issn = {2640-3498},
   urldate = {2024-01-04},
-  abstract = {The goal of compressed sensing is to estimate a vector from an underdetermined system of noisy linear measurements, by making use of prior knowledge on the structure of vectors in the relevant domain. For almost all results in this literature, the structure is represented by sparsity in a well-chosen basis. We show how to achieve guarantees similar to standard compressed sensing but without employing sparsity at all. Instead, we suppose that vectors lie near the range of a generative model G:Rk{$\rightarrow$}RnG:Rk{$\rightarrow$}RnG: {\textbackslash}mathbb\{R\}\^{}k {\textbackslash}to {\textbackslash}mathbb\{R\}\^{}n. Our main theorem is that, if GGG is LLL-Lipschitz, then roughly (klogL)O(klog⁡L){\textbackslash}mathcal\{O\}(k {\textbackslash}log L) random Gaussian measurements suffice for an {$\ell$}2/{$\ell$}2{$\ell$}2/{$\ell$}2{\textbackslash}ell\_2/{\textbackslash}ell\_2 recovery guarantee. We demonstrate our results using generative models from published variational autoencoder and generative adversarial networks. Our method can use 555-101010x fewer measurements than Lasso for the same accuracy.},
+  abstract = {The goal of compressed sensing is to estimate a vector from an underdetermined system of noisy linear measurements, by making use of prior knowledge on the structure of vectors in the relevant domain. For almost all results in this literature, the structure is represented by sparsity in a well-chosen basis. We show how to achieve guarantees similar to standard compressed sensing but without employing sparsity at all. Instead, we suppose that vectors lie near the range of a generative model G:Rk{$\rightarrow$}RnG:Rk{$\rightarrow$}RnG: {\textbackslash}mathbb\{R\}{\textasciicircum}k {\textbackslash}to {\textbackslash}mathbb\{R\}{\textasciicircum}n. Our main theorem is that, if GGG is LLL-Lipschitz, then roughly (klogL)O(klog⁡L){\textbackslash}mathcal\{O\}(k {\textbackslash}log L) random Gaussian measurements suffice for an {$\ell$}2/{$\ell$}2{$\ell$}2/{$\ell$}2{\textbackslash}ell\_2/{\textbackslash}ell\_2 recovery guarantee. We demonstrate our results using generative models from published variational autoencoder and generative adversarial networks. Our method can use 555-101010x fewer measurements than Lasso for the same accuracy.},
   langid = {english},
   file = {/home/cbd/Zotero/storage/3A7TV68A/Bora et al. - 2017 - Compressed Sensing using Generative Models.pdf;/home/cbd/Zotero/storage/FLPXIRUP/Bora et al. - 2017 - Compressed Sensing using Generative Models.pdf}
 }
@@ -786,8 +786,8 @@
 }
 
 @misc{chengDiffTuneHyperparameterFreeAutoTuning2023,
-  title = {{{DiffTune}}\$\^{}+\$: {{Hyperparameter-Free Auto-Tuning}} Using {{Auto-Differentiation}}},
-  shorttitle = {{{DiffTune}}\$\^{}+\$},
+  title = {{{DiffTune}}\${\textasciicircum}+\$: {{Hyperparameter-Free Auto-Tuning}} Using {{Auto-Differentiation}}},
+  shorttitle = {{{DiffTune}}\${\textasciicircum}+\$},
   author = {Cheng, Sheng and Song, Lin and Kim, Minkyung and Wang, Shenlong and Hovakimyan, Naira},
   year = {2023},
   month = may,
@@ -1601,7 +1601,7 @@
   month = apr,
   journal = {arXiv: Statistics Theory},
   urldate = {2023-05-06},
-  abstract = {We consider in this paper the problem of sampling a probability distribution {$\pi$} having a density w.r.t. the Lebesgue measure on \${\textbackslash}mathbb\{R\}\^{}d\$, known up to a normalisation factor \$x {\textbackslash}mapsto {\textbackslash}mathrm\{e\}\^{}\{-U (x)\} / {\textbackslash}int\_\{{\textbackslash}mathbb\{R\}\^{}d\} {\textbackslash}mathrm\{e\}\^{}\{-U (y)\}{\textbackslash}mathrm\{d\}y\$. Under the assumption that \$U\$ is continuously differentiable, \${\textbackslash}nabla U\$ is globally Lipshitz and \$U\$ is strongly convex, we obtain non-asymptotic bounds for the convergence to stationarity in Wasserstein distances of the sampling method based on the Euler discretization of the Langevin stochastic differential equation for both constant and decreasing step sizes. The dependence on the dimension of the state space of the obtained bounds is studied to demonstrate the applicability of this method in the high dimensional setting. The convergence of an appropriately weighted empirical measure is also investigated and bounds for the mean square error and exponential deviation inequality for Lipschitz functions are reported. Some numerical results are presented to illustrate our findings.}
+  abstract = {We consider in this paper the problem of sampling a probability distribution {$\pi$} having a density w.r.t. the Lebesgue measure on \${\textbackslash}mathbb\{R\}{\textasciicircum}d\$, known up to a normalisation factor \$x {\textbackslash}mapsto {\textbackslash}mathrm\{e\}{\textasciicircum}\{-U (x)\} / {\textbackslash}int\_\{{\textbackslash}mathbb\{R\}{\textasciicircum}d\} {\textbackslash}mathrm\{e\}{\textasciicircum}\{-U (y)\}{\textbackslash}mathrm\{d\}y\$. Under the assumption that \$U\$ is continuously differentiable, \${\textbackslash}nabla U\$ is globally Lipshitz and \$U\$ is strongly convex, we obtain non-asymptotic bounds for the convergence to stationarity in Wasserstein distances of the sampling method based on the Euler discretization of the Langevin stochastic differential equation for both constant and decreasing step sizes. The dependence on the dimension of the state space of the obtained bounds is studied to demonstrate the applicability of this method in the high dimensional setting. The convergence of an appropriately weighted empirical measure is also investigated and bounds for the mean square error and exponential deviation inequality for Lipschitz functions are reported. Some numerical results are presented to illustrate our findings.}
 }
 
 @article{erikssonScalingGaussianProcess2018,
@@ -1617,7 +1617,7 @@
   issn = {10495258},
   doi = {10.48550/arxiv.1810.12283},
   urldate = {2022-10-18},
-  abstract = {Gaussian processes (GPs) with derivatives are useful in many applications, including Bayesian optimization, implicit surface reconstruction, and terrain reconstruction. Fitting a GP to function values and derivatives at \$n\$ points in \$d\$ dimensions requires linear solves and log determinants with an \$\{n(d+1) {\textbackslash}times n(d+1)\}\$ positive definite matrix -- leading to prohibitive \${\textbackslash}mathcal\{O\}(n\^{}3d\^{}3)\$ computations for standard direct methods. We propose iterative solvers using fast \${\textbackslash}mathcal\{O\}(nd)\$ matrix-vector multiplications (MVMs), together with pivoted Cholesky preconditioning that cuts the iterations to convergence by several orders of magnitude, allowing for fast kernel learning and prediction. Our approaches, together with dimensionality reduction, enables Bayesian optimization with derivatives to scale to high-dimensional problems and large evaluation budgets.},
+  abstract = {Gaussian processes (GPs) with derivatives are useful in many applications, including Bayesian optimization, implicit surface reconstruction, and terrain reconstruction. Fitting a GP to function values and derivatives at \$n\$ points in \$d\$ dimensions requires linear solves and log determinants with an \$\{n(d+1) {\textbackslash}times n(d+1)\}\$ positive definite matrix -- leading to prohibitive \${\textbackslash}mathcal\{O\}(n{\textasciicircum}3d{\textasciicircum}3)\$ computations for standard direct methods. We propose iterative solvers using fast \${\textbackslash}mathcal\{O\}(nd)\$ matrix-vector multiplications (MVMs), together with pivoted Cholesky preconditioning that cuts the iterations to convergence by several orders of magnitude, allowing for fast kernel learning and prediction. Our approaches, together with dimensionality reduction, enables Bayesian optimization with derivatives to scale to high-dimensional problems and large evaluation budgets.},
   archiveprefix = {arxiv},
   file = {/home/cbd/Zotero/storage/N4CGJ9AD/full-text.pdf}
 }
@@ -1905,7 +1905,7 @@
   publisher = {PMLR},
   issn = {1938-7228},
   urldate = {2024-01-03},
-  abstract = {The graduated optimization approach, also known as the continuation method, is a popular heuristic to solving non-convex problems that has received renewed interest over the last decade.Despite being popular, very little is known in terms of its theoretical convergence analysis. In this paper we describe a new first-order algorithm based on graduated optimization and analyze its performance. We characterize a family of non-convex functions for which this algorithm provably converges to a global optimum. In particular, we prove that the algorithm converges to an {$\varepsilon$}-approximate solution within O(1 / {$\varepsilon$}\^{}2) gradient-based steps. We extend our algorithm and analysis to the setting of stochastic non-convex optimization with noisy gradient feedback, attaining the same convergence rate. Additionally, we discuss the setting of ``zero-order optimization", and devise a variant of our algorithm which converges at rate of O(d\^{}2/ {$\varepsilon$}\^{}4).},
+  abstract = {The graduated optimization approach, also known as the continuation method, is a popular heuristic to solving non-convex problems that has received renewed interest over the last decade.Despite being popular, very little is known in terms of its theoretical convergence analysis. In this paper we describe a new first-order algorithm based on graduated optimization and analyze its performance. We characterize a family of non-convex functions for which this algorithm provably converges to a global optimum. In particular, we prove that the algorithm converges to an {$\varepsilon$}-approximate solution within O(1 / {$\varepsilon$}{\textasciicircum}2) gradient-based steps. We extend our algorithm and analysis to the setting of stochastic non-convex optimization with noisy gradient feedback, attaining the same convergence rate. Additionally, we discuss the setting of ``zero-order optimization", and devise a variant of our algorithm which converges at rate of O(d{\textasciicircum}2/ {$\varepsilon$}{\textasciicircum}4).},
   langid = {english},
   file = {/home/cbd/Zotero/storage/KH8ATV2R/Hazan et al. - 2016 - On Graduated Optimization for Stochastic Non-Conve.pdf}
 }
